		
	* New feature: 
		
		Added wiki-style linking.
		(Alex Chapin)
		
	* New feature: 
		
		Added a wiki parsing engine to support wiki-style linking.
		(Adam Franco)
		
	* Bug Fix: 
		Adding ' + 0' to permission fetching queries to force enumerated fields into
		using their numeric [index] values rather than the string version. The
		previous form had stopped working in MySQL 5.
		(Adam Franco)
	
v. 1.7.4 (2007-02-20)
----------------------------------------------------
		
	* Bug Fix: #1661595 
		Page and section order is now re-keyed when adding a new page/section so
		that new pages/sections are always at the end of the list. Before, moves or
		deletions of pages/sections would result in gaps in the order which could
		allow new pages/sections to be given an order other than the end of the
		list. 
		(Adam Franco)
		
	* Bug Fix: #1663713 
		Initial version of content is now saved creating a new content block, not
		just when updating.
		(Adam Franco)
		
	* Bug Fix: #1663677 
		Detail view for 'link'-type and 'RSS'-type content blocks now displays their
		content. 
		(Adam Franco)
		
	* Bug Fix: #1663638 
		
		Fixed RSS feeds so that ampersands are not doubly encoded.
		(Adam Franco)
		
	* Bug Fix: 
		
		Fixed error in which only one current class was shown to students.
		(Adam Franco)
		
	* Change: 
		Added a configuration list for additional custom themes to the config to
		prevent needing to modify the themes/themeslist.inc.php when adding custom
		themes. 
		(Alex Chapin)
	
v. 1.7.3 (2007-02-16)
----------------------------------------------------
		
	* Change: 
		Copy site UI now displayed on Segue home pages by default (changes in
		version 1.7.0 hid the copy site UI until a section was expanded).
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed Segue home page display for students that was broken by updates to
		Segue home page display made in version 1.7.0
		(Alex Chapin)
	
v. 1.7.2 (2007-02-09)
----------------------------------------------------
		
	* Bug Fix: 