@@ -80,6 +80,9 @@
 			into using their numeric [index] values rather than the string version. 
 			The previous form had stopped working in MySQL 5.
 		 (<em>Adam Franco</em>)</li>
+		<li> Bug Fix:  
+			Now runs updaters automatically when first installing.
+		 (<em>Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 1.7.4</h2>
 <h3>2007-02-20</h3>
